infrastructure/base/configs/httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-httproute
  namespace: cilium
spec:
  parentRefs:
  - name: mdch-lab
  hostnames:
  - "hubble.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
  - backendRefs:
    - name: hubble-ui
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: mdch-lab
    namespace: cilium
  hostnames:
  - "grafana.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
  - backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy-httproute
  namespace: monitoring
spec:
  parentRefs:
  - name: mdch-lab
    namespace: cilium
  hostnames:
  - alloy.mdch-lab.dev
  rules:
  - backendRefs:
    - name: k8s-monitoring-alloy-logs
      port: 12345
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: mdch-lab
      namespace: cilium
  hostnames:
    - "prometheus.mdch-lab.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: mdch-lab
      namespace: cilium
  hostnames:
    - "alertmanager.mdch-lab.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
