infrastructure/base/configs/flux-webhook-receiver.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
spec:
  parentRefs:
    - name: mdch-lab
      namespace: cilium
  hostnames:
    - "webhook-receiver.mdch-lab.dev"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: webhook-receiver
          port: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-identity
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
  - fromEndpoints:
    - matchLabels:
        "reserved:ingress": ""
